--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,11 @@ audioread==3.0.1
 certifi==2024.12.14
 cffi==1.17.1
 charset-normalizer==3.4.1
+contourpy==1.3.1
+cycler==0.12.1
 decorator==5.1.1
 flatbuffers==24.12.23
+fonttools==4.55.3
 gast==0.6.0
 google-pasta==0.2.0
 grpcio==1.68.1
@@ -13,6 +16,7 @@ h5py==3.12.1
 idna==3.10
 joblib==1.4.2
 keras==3.7.0
+kiwisolver==1.4.8
 lazy_loader==0.4
 libclang==18.1.1
 librosa==0.10.2.post1
@@ -20,6 +24,7 @@ llvmlite==0.43.0
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.10.0
 mdurl==0.1.2
 ml-dtypes==0.4.1
 msgpack==1.1.0
@@ -29,11 +34,14 @@ numpy==2.0.2
 opt_einsum==3.4.0
 optree==0.13.1
 packaging==24.2
+pillow==11.1.0
 platformdirs==4.3.6
 pooch==1.8.2
 protobuf==5.29.2
 pycparser==2.22
 Pygments==2.18.0
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
 requests==2.32.3
 rich==13.9.4
 scikit-learn==1.6.0
