--- a/requirements.txt
+++ b/requirements.txt
@@ -30,18 +30,20 @@ ml-dtypes==0.4.1
 msgpack==1.1.0
 namex==0.0.8
 numba==0.60.0
-numpy==2.0.2
+numpy==1.26.4
 opt_einsum==3.4.0
 optree==0.13.1
 packaging==24.2
+pandas==2.2.3
 pillow==11.1.0
 platformdirs==4.3.6
 pooch==1.8.2
-protobuf==5.29.2
+protobuf==4.25.5
 pycparser==2.22
 Pygments==2.18.0
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
+pytz==2024.2
 requests==2.32.3
 rich==13.9.4
 scikit-learn==1.6.0
@@ -54,9 +56,11 @@ tensorboard==2.18.0
 tensorboard-data-server==0.7.2
 tensorflow==2.18.0
 termcolor==2.5.0
+tf_keras-nightly==2.16.0.dev2024021410
 threadpoolctl==3.5.0
 tqdm==4.67.1
 typing_extensions==4.12.2
+tzdata==2024.2
 urllib3==2.3.0
 Werkzeug==3.1.3
 wheel==0.45.1
